--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,1 +1,7 @@
-font{color:#fff}body{color:red}
+font {
+  color: white; }
+
+body {
+  background-color: #9E9E9E; }
+
+/*# sourceMappingURL=styles.css.map */
