initial commit for the day

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,10 @@
-@import 'components/font';
 @import 'components/var';
+@import 'components/reset';
+@import 'components/font';
+@import 'components/head';
+@import 'components/main';
+@import 'components/foot';
+@import 'components/breakpoints';
 
 body{
     background-color: $primary-back-color;
