--- a/resources/assets/sass/components/font.scss
+++ b/resources/assets/sass/components/font.scss
@@ -1,3 +1,14 @@
-font{
-    color: white;
+.heading{
+    h1{
+        color: black;
+        text-align: center;
+        font-family: Agency FB;
+        font-weight: normal;
+    }
+}
+
+nav{
+    font-family: Agency FB;
+    font-weight: normal;
+    font-size: 2em;
 }
