--- a/resources/assets/sass/components/reset.scss
+++ b/resources/assets/sass/components/reset.scss
@@ -94,7 +94,9 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+li{
+    list-style: none;
+}
 
 
 
