--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,5 +4,6 @@
 @import 'components/head';
 @import 'components/main';
 @import 'components/foot';
+@import 'components/imageSlider';
 @import 'components/breakpoints';
 
