--- a/resources/assets/sass/components/font.scss
+++ b/resources/assets/sass/components/font.scss
@@ -5,6 +5,12 @@
         font-family: Agency FB;
         font-weight: normal;
     }
+    
+    #bars{
+        font-family: Agency FB;
+        font-weight: normal;
+        font-size: 2em;
+    }
 }
 
 nav{
