--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -208,6 +208,11 @@ li {
   font-family: Agency FB;
   font-weight: normal; }
 
+.heading #bars {
+  font-family: Agency FB;
+  font-weight: normal;
+  font-size: 2em; }
+
 nav {
   font-family: Agency FB;
   font-weight: normal;
