--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -10,13 +10,19 @@
 }
 
 @media only screen and (min-width: 75em) {
+    #bars{
+        display: none;
+    }
     nav{
-        margin: auto;
+        margin: 2em 4em 2em 4em;
+        display: block;
         ul{
             display: flex;
-            li{
-                flex: 1 1 auto;
-            }
+                li{
+                    margin:0 2.35em 0 2.5em;
+//                    text-align: center;
+                    flex: 1 1 content;
+                }
         }
     }
 }
