--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -221,6 +221,9 @@ nav {
     color: black; }
 
 .heading {
+  background-color: #6E6E6E;
+  width: 100%;
+  height: 7em;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -240,7 +243,7 @@ nav {
 
 nav {
   display: none;
-  margin-top: 3em; }
+  margin-top: 4em; }
   nav a {
     text-decoration: none; }
   nav ul {
@@ -294,6 +297,13 @@ section {
     background-color: lightgray; } }
 
 @media only screen and (min-width: 75em) {
+  .heading {
+    margin: 1em 0 1.5em 0;
+    width: 100%;
+    border: thin red solid; }
+    .heading h1 {
+      margin-left: 16em;
+      display: block; }
   #bars {
     display: none; }
   nav {
@@ -304,7 +314,7 @@ section {
       display: -ms-flexbox;
       display: flex; }
       nav ul li {
-        margin: 0 2.35em 0 2.5em;
+        margin: 0 2em 0 2em;
         -webkit-flex: 1 1 content;
         -ms-flex: 1 1 content;
         flex: 1 1 content; } }
