--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -1,4 +1,7 @@
 .heading{
+    background-color: $secondary-back-color;
+    width: 100%;
+    height: 7em;
     display: flex;
     position: fixed;
     top: 0;
@@ -19,7 +22,7 @@
 
 nav{
     display: none;
-    margin-top: 3em;
+    margin-top: 4em;
     
     a{
             text-decoration: none;
