--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -24,8 +24,8 @@
         display: none;
     }
     nav{
-        margin: 2em 4em 2em 4em;
         display: block;
+        margin: 5em;
         ul{
             display: flex;
                 li{
