--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -223,7 +223,7 @@ nav {
 .heading {
   background-color: #6E6E6E;
   width: 100%;
-  height: 7em;
+  height: 6.5em;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -239,7 +239,7 @@ nav {
     -ms-flex-line-pack: center;
     align-content: center; }
   .heading p {
-    margin-left: 0.5em; }
+    margin-right: 1em; }
 
 nav {
   display: none;
@@ -253,6 +253,9 @@ nav {
       margin: auto;
       text-align: center; }
 
+#Nav {
+  margin-bottom: -4em; }
+
 .linkUnderline {
   text-decoration: underline; }
 
@@ -261,6 +264,15 @@ body {
 
 section {
   min-height: 100vh; }
+
+.image-slider {
+  -webkit-flex: 1 1 100%;
+  -ms-flex: 1 1 100%;
+  flex: 1 1 100%;
+  width: 18em;
+  height: 15em;
+  position: relative;
+  margin: 10em auto 0 auto; }
 
 .image-shown {
   display: inline-block; }
@@ -288,12 +300,23 @@ section {
   height: 100%;
   border-radius: 0.50em; }
 
+.links {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
 .previousLink, .nextLink {
   -webkit-flex: 1 1 content;
   -ms-flex: 1 1 content;
   flex: 1 1 content;
-  margin-top: 5.5em;
-  margin-left: 5.5em; }
+  margin-top: 1em;
+  margin-left: 2em;
+  width: 8em;
+  color: black;
+  text-decoration: none;
+  font-family: Agency FB;
+  font-size: 1.4em;
+  font-weight: normal; }
 
 @media only screen and (min-width: 35em) {
   /* Style adjustments for viewports that meet the condition */
@@ -311,8 +334,8 @@ section {
   #bars {
     display: none; }
   nav {
-    margin: 2em 4em 2em 4em;
-    display: block; }
+    display: block;
+    margin: 5em; }
     nav ul {
       display: -webkit-flex;
       display: -ms-flexbox;
