--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -1,7 +1,7 @@
 .heading{
     background-color: $secondary-back-color;
     width: 100%;
-    height: 7em;
+    height: 6.5em;
     display: flex;
     position: fixed;
     top: 0;
@@ -14,7 +14,7 @@
     }
     
     p{
-        margin-left: 0.5em;
+        margin-right: 1em;
     }
 }
 
@@ -41,6 +41,10 @@ nav{
             text-align: center;
         }
     }
+}
+
+#Nav{
+    margin-bottom: -4em;
 }
 
 .linkUnderline{
