--- a/resources/assets/sass/components/imageSlider.scss
+++ b/resources/assets/sass/components/imageSlider.scss
@@ -29,9 +29,20 @@
 	border-radius: 0.50em;
 }
 
+.links{
+    display: flex;
+}
+
 .previousLink, .nextLink
 {
     flex:  1 1 content;
-	margin-top: 5.5em;
-    margin-left: 5.5em;
+	margin-top: 1em;
+    margin-left: 2em;
+    width: 8em;
+    color: black;
+    text-decoration: none;
+    font-family: Agency FB;
+    font-size: 1.4em;
+    font-weight: normal;
 }
+
