--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -25,7 +25,7 @@
     }
     nav{
         display: block;
-        margin: 5em;
+        margin: 5em 4em 5em 4em;
         ul{
             display: flex;
                 li{
