--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -1,11 +1,12 @@
 .heading{
     background-color: $secondary-back-color;
+    position: fixed;
     width: 100%;
+    z-index: 1000;
     height: 6.5em;
     display: flex;
-    position: fixed;
     top: 0;
-    z-index: 100;
+    left: 0;
     
     h1{
         margin: auto;
@@ -44,7 +45,7 @@ nav{
 }
 
 #Nav{
-    margin-bottom: -4em;
+//    margin-bottom: -4em;
 }
 
 .linkUnderline{
