--- a/resources/assets/sass/components/font.scss
+++ b/resources/assets/sass/components/font.scss
@@ -24,7 +24,7 @@ nav{
     }
 }
 
-#Home{
+#Home,#Portfolio,#About,#Contact,#Other {
     h1{
         color: black;
         text-align: center;
@@ -34,21 +34,41 @@ nav{
     }
 }
 
-#Portfolio{
-    h1{
+.work{
+    p{
         color: black;
-        text-align: center;
         font-family: Agency FB;
         font-weight: normal;
-        font-size: 2.5em;
+        font-size: 1.5em;
     }
 }
-.paper{
+
+.paper,.logo,.packaging{
     p{
         color: black;
         text-align: center;
         font-family: Agency FB;
         font-weight: normal;
         font-size: 2em;
+    }
+}
+
+#About{
+    p{
+        color: black;
+        font-family: Agency FB;
+        font-weight: normal;
+        font-size: 1.5em;
+        text-align: justify;
+    }
+}
+
+footer{
+    p{
+        color: black;
+        text-align: center;
+        font-family: Agency FB;
+        font-weight: normal;
+        font-size: 1.4em;
     }
 }
