--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -32,7 +32,8 @@ section{
     display: flex;
 }
 
-.paper{
+.paper,.logo,.packaging{
+
     flex: 1 0 100%;
 //    border: thin red solid;
     width: 23.5em;
@@ -41,9 +42,11 @@ section{
         height: 10em;
         margin-left: 1em;
         margin-bottom: 1em;
+        border: 0.15em black solid;
+        border-radius: 2em;
     }
-    
-    p{
-        margin: 0.4em auto 0.4em auto;
-    }
+}
+
+.logo,.packaging{
+    display: none;
 }
