--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -389,11 +389,11 @@ section {
 
 @media only screen and (min-width: 75em) {
   .heading {
-    margin: 1em 0 1.5em 0;
+    margin: 0 0 1em 0;
     width: 100%;
-    border: thin red solid; }
+    height: 7em; }
     .heading h1 {
-      margin-left: 16em;
+      margin: auto;
       display: block; }
   #Bars {
     display: none; }
@@ -401,15 +401,18 @@ section {
     display: block;
     position: fixed;
     z-index: 1000;
-    top: 50;
-    right: 50;
-    margin: 0; }
+    top: 0;
+    left: 0;
+    background-color: #6E6E6E;
+    margin-top: 3.5em;
+    width: 100%;
+    height: 2.5em; }
     nav ul {
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex; }
       nav ul li {
-        margin: 0 2em 0 2em;
+        margin-left: 6em;
         -webkit-flex: 1 1 content;
         -ms-flex: 1 1 content;
         flex: 1 1 content; }
