--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -11,11 +11,12 @@
 
 @media only screen and (min-width: 75em) {
     .heading{
-       margin: 1em 0 1.5em 0;
+       margin: 0 0 1em 0;
         width: 100%;
-        border: thin red solid;
+        height: 7em;
+//        border: thin red solid;
         h1{
-            margin-left: 16em;
+            margin: auto;
             display: block;
         }
     }
@@ -28,13 +29,16 @@
         display: block;
         position: fixed;
         z-index: 1000;
-        top: 50;
-        right: 50;
-        margin-left: 2em''
+        top: 0;
+        left: 0;
+        background-color: $secondary-back-color;
+        margin-top: 3.5em;
+        width: 100%;
+        height: 2.5em;
         ul{
             display: flex;
                 li{
-                    margin:0 2em 0 2em;
+                    margin-left: 6em;
                     flex: 1 1 content;
                 }
         }
