--- a/resources/assets/sass/components/font.scss
+++ b/resources/assets/sass/components/font.scss
@@ -58,8 +58,8 @@ nav{
         color: black;
         font-family: Agency FB;
         font-weight: normal;
-        font-size: 1.5em;
-        text-align: justify;
+        font-size: 1.2em;
+        text-align: left;
     }
 }
 
@@ -71,4 +71,8 @@ footer{
         font-weight: normal;
         font-size: 1.4em;
     }
+}
+
+#Form{
+    color: black;
 }
