--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -17,6 +17,13 @@
     p{
         margin-right: 1em;
     }
+    
+    img{
+        width: 5em;
+        height: 5em;
+        margin-top: 1em;
+        margin-left: 1em;
+    }
 }
 
 
