--- a/resources/assets/sass/components/font.scss
+++ b/resources/assets/sass/components/font.scss
@@ -63,6 +63,16 @@ nav{
     }
 }
 
+.info {
+    p{
+        color: black;
+        font-family: Agency FB;
+        font-weight: normal;
+        font-size: 1.3em;
+        text-align: center;
+    }
+}
+
 footer{
     p{
         color: black;
