--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -31,6 +31,8 @@
 nav{
     display: none;
     margin-top: 4em;
+    background-color: $primary-back-color;
+
     
     a{
             text-decoration: none;
