--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -23,7 +23,7 @@
         display: none;
     }
     
-    nav{
+    #Nav{
         display: block;
         position: fixed;
         z-index: 1000;
