--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -1,3 +1,11 @@
+.show{
+    display: block;
+}
+
+.hide{
+    display: none;
+}
+
 body{
     background-color: $primary-back-color;
 }
@@ -33,7 +41,6 @@ section{
 }
 
 .paper,.logo,.packaging{
-
     flex: 1 0 100%;
 //    border: thin red solid;
     width: 23.5em;
