--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -1,7 +1,14 @@
+header{
+  
+}
 .heading{
     background-color: $secondary-back-color;
+    margin: 0;
+    padding: 0;
     position: fixed;
+//    border: 1px red solid;
     width: 100%;
+    
     z-index: 1000;
     height: 6.5em;
     display: flex;
