--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -7,7 +7,13 @@
 }
 
 body{
+    margin: 0;
+    padding: 0;
     background-color: $primary-back-color;
+//    width: 100%;
+    border: thin blue solid;
+//    max-width: 100vw;
+//    overflow-x:hidden;
 }
 
 section{
@@ -74,16 +80,23 @@ section{
     display: none;
 }
 
+.pic1,.pic2,.pic3,#Paperart,#Logo,#Pack{
+    cursor: pointer;
+}
+
 .form{
 //    border: thin red solid;
     #Form{
 //        border: thin blue solid;
-        width: 21em;
+        width: 23em;
         margin: auto;
         
         label{
 //            border: thin green solid;
-            width: 2em;
+         
+            float: left;
+            clear:both;
+            display: inline-block;
         }
         
         input{
@@ -92,6 +105,7 @@ section{
             height: 2em;
             margin-bottom: 1.2em;
             margin-left: 1em;
+            float:left;
         }
         
         #Email{
@@ -104,7 +118,7 @@ section{
         
         #Message{
             width: 17.8em;
-            margin-left: 1.75em;
+            margin-left: 2em;
         }
         
         #Send{
