--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -10,7 +10,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: $primary-back-color;
-   width: 100%;
+//    width: 100%;
     border: thin blue solid;
 //    max-width: 100vw;
 //    overflow-x:hidden;
