--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -1,6 +1,8 @@
 @media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
-   
+   .heading{
+       background-color: $secondary-back-color;
+   }
 }
 
 @media only screen and (min-width: 55em) {
