--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -85,7 +85,7 @@ section{
 }
 
 .form{
-//    border: thin red solid;
+   border: thin red solid;
     #Form{
 //        border: thin blue solid;
         width: 23em;
@@ -93,10 +93,9 @@ section{
         
         label{
 //            border: thin green solid;
-         
-            float: left;
-            clear:both;
-            display: inline-block;
+            // float: left;
+            // clear:both;
+            // display: inline-block;
         }
         
         input{
