--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -31,10 +31,10 @@ section{
     margin: 0 auto 0 auto;
 }
 
-#Home{
-//    margin-top: 8em;
+// #Home{
+// //    margin-top: 8em;
 
-}
+// }
 .work{
     display: flex;
     p{
@@ -91,12 +91,12 @@ section{
         width: 23em;
         margin: auto;
         
-        label{
-//            border: thin green solid;
-            // float: left;
-            // clear:both;
-            // display: inline-block;
-        }
+//         label{
+// //            border: thin green solid;
+//             // float: left;
+//             // clear:both;
+//             // display: inline-block;
+//         }
         
         input{
 //            border: thin orange solid;
