--- a/resources/assets/sass/components/font.scss
+++ b/resources/assets/sass/components/font.scss
@@ -69,7 +69,7 @@ nav{
         font-family: Agency FB;
         font-weight: normal;
         font-size: 1.3em;
-        text-align: center;
+        text-align: left;
     }
 }
 
@@ -85,4 +85,5 @@ footer{
 
 #Form{
     color: black;
+    font-size: 1.2em;
 }
