--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -1,3 +1,9 @@
+html{
+    width: auto;
+    margin: 0;
+    padding: 0;
+    border: red thin solid;
+}
 .heading{
     background-color: $secondary-back-color;
     margin: 0;
@@ -20,6 +26,7 @@
     
     p{
         margin-right: 1em;
+        margin-top: 1em;
     }
     
     img{
