--- a/public/slick/slick.css
+++ b/public/slick/slick.css
@@ -80,9 +80,9 @@
 {
     display: none;
     float: left;
-
     height: 100%;
     min-height: 1px;
+/*    border: gold thin solid;*/
 }
 [dir='rtl'] .slick-slide
 {
