--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -10,10 +10,16 @@ body{
     margin: 0;
     padding: 0;
     background-color: $primary-back-color;
-//    width: 100%;
-    border: thin blue solid;
+    width: 100%;
+//    border: thin blue solid;
 //    max-width: 100vw;
 //    overflow-x:hidden;
+}
+
+.img-slider {
+    margin-left: 0.8em;
+    width: 24em;
+//    border: thin darkblue solid;
 }
 
 section{
@@ -24,11 +30,11 @@ section{
 
 .image-slider{   
     flex: 1 1 100%;
-	width: 18em;
+	width: 18.5em;
 	height: 15em;
-	position: relative;
+//	position: relative;
 //    margin-top: 10em;
-    margin: 0 auto 0 auto;
+    margin: 0 1em 0 0.5em;
 }
 
 // #Home{
@@ -44,6 +50,7 @@ section{
 }
 .display{
     display: flex;
+    margin-left: 2em;
 }
 
 .paper,.logo,.packaging{
@@ -65,14 +72,23 @@ section{
 
 .info{
     opacity: 1;
-    border: thin black solid;
+//    border: thin black solid;
+    height: 32em;
     background-color: $primary-back-color;
+    p{
+        width: 15em;
+        margin-left: 3em;
+    }
     img{
         width: 20em;
         height: 20em;
-        margin-left: 1.5em;
-        margin-top: 1.5em;
+        margin: 1.5em 3em 1.5em 3em;
+//        margin-top: 1.5em;
         border: none;
+    }
+    .cls{
+        width: 5em;
+        margin: 1em 0 0 15em;
     }
 }
 
@@ -80,31 +96,33 @@ section{
     display: none;
 }
 
-.pic1,.pic2,.pic3,#Paperart,#Logo,#Pack{
+.pic1,.pic2,.pic3,#Paperart,#Logo,#Pack,.cls{
     cursor: pointer;
 }
 
 .form{
-   border: thin red solid;
+//   border: thin red solid;
     #Form{
-//        border: thin blue solid;
+//        border: thin green solid;
         width: 23em;
         margin: auto;
         
-//         label{
-// //            border: thin green solid;
-//             // float: left;
-//             // clear:both;
-//             // display: inline-block;
-//         }
+        label{
+//             border: thin green solid;
+             width: 4.8em;
+             // float: left;
+             // clear:both;
+              display: inline-block;
+        }
         
         input{
 //            border: thin orange solid;
-            width: 18em;
+            width: 17em;
             height: 2em;
-            margin-bottom: 1.2em;
-            margin-left: 1em;
-            float:left;
+            margin-top: -2.5em;
+//            margin-bottom: 1.2em;
+            margin-left: 5.2em;
+            display: inline-block;
         }
         
         #Email{
@@ -116,13 +134,17 @@ section{
         }
         
         #Message{
-            width: 17.8em;
-            margin-left: 2em;
+            margin-top: -2em;
+            width: 17em;
+            margin-left: 5.2em;
         }
         
         #Send{
             height: 3em;
-            margin: 1em 0 0 12em;
+            width: 100%;
+            margin: 1em 0 0 -0.7em;
+            background-color: $primary-back-color;
+            border: none;
         }
     }
 }
