--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -16,6 +16,11 @@ body{
 //    overflow-x:hidden;
 }
 
+.container{
+    width: 100%;
+    border: cyan solid thin;
+}
+
 .img-slider {
     margin-left: 0.8em;
     width: 24em;
